logs/dynasty.log
nohup: ignoring input
python: can't open file '/data/data/com.termux/files/home/empress/throne/dynasty_multiplier.py': [Errno 2] No such file or directory
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/dynasty_multiplier.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
